--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.0.10
   firebase_auth: ^4.2.5
   image_picker: ^0.8.6+1
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
