--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   firebase_auth: ^4.2.5
   image_picker: ^0.8.6+1
   shared_preferences: ^2.0.17
+  file_picker: ^5.2.5
+  video_player: ^2.5.1
+  flutter_pdfview: ^1.2.5
+  audioplayers: ^3.0.1
+  uuid: ^3.0.7
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
