--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^2.0.0+1
+  flutter_svg: ^2.0.4
   google_fonts: ^4.0.3
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
@@ -50,6 +50,7 @@ dependencies:
   audioplayers: ^3.0.1
   uuid: ^3.0.7
   flutter_easyloading: ^3.0.5
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -75,8 +76,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/
-  #   - images/a_dot_ham.jpeg
+     - assets/icons/
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
